# Rag-WebApp

./: README.md
backend/: .gitignore  README.md  main.py  pyproject.toml
backend/db/: db.py
backend/routers/: README.md  api.py  conversation.py
backend/utils/: README.md  cache.py  chromadb_utils.py  db_utils.py  ollama_utils.py  pipeline.py  rag_utils.py  sentence_model_cache.py  tinydb_utils.py
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/app/: store.ts
frontend/src/components/: Chat.tsx  ErrorModal.tsx  Footer.tsx  Header.tsx  PromptTemplateModal.tsx  SideBar.tsx  SimpleChat.tsx  SuccessModal.tsx  UploadModal.tsx
frontend/src/features/: chatSlice.ts  footerSlice.ts  notificationSlice.ts
frontend/src/pages/: Conversation.tsx  Home.tsx
