[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "ollama>=0.5.3",
    "python-magic-bin>=0.4.14",
    "tinydb>=4.8.2",
    "unstructured-ingest[chroma]>=1.2.11",
    "unstructured[all-docs]>=0.18.13",
    "uvicorn>=0.35.0",
]
