[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.0.20",
    "docling>=2.48.0",
    "fastapi>=0.116.1",
    "ollama>=0.5.3",
    "sentence-transformers>=5.1.0",
    "tinydb>=4.8.2",
    "transformers>=4.55.2",
    "uvicorn>=0.35.0",
]
